--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/alessandromorsa">alessandromorsa</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages</span>
         </div>
 
         <h3>Welcome to GitHub Pages.</h3>
